--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Projeto Redes Sociais</title>
 </head>
 <body>
-    <h1>Teste</h1>
+    <main>
+        <section id="menu">
+            <ul>
+                <li><a href="#"><img src="imagens/logo-home.jpg" alt="Home"></a></li>
+                <li><a href="#"><img src="imagens/logo-youtube.jpg" alt="YouTube"></a></li>
+                <li><a href="#"><img src="imagens/logo-github.jpg" alt="GitHub"></a></li>
+                <li><a href="#"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a></li>
+                <li><a href="#"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a></li>
+                <li><a href="#"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a></li>
+            </ul>
+        </section>
+        <section id="celular">
+            <iframe src="" name="tela"></iframe>
+        </section>
+    </main>
 </body>
 </html>
